# 2pc-mpc

./: .gitignore  Cargo.toml  DKG.md  LICENSE  Presign.md  README.md  Sign.md  rustfmt.toml
.github/workflows/: ci.yaml
bck/: ahe.rs
benches/: benches.rs
src/: ahe.rs  commitment.rs  commitments.rs  dkg.rs  group.rs  helpers.rs  homomorphic_encryption.rs  lib.rs  marker.rs  presign.rs  proofs.rs  protocol_context.rs  sign.rs  traits.rs
src/ahe/: paillier.rs
src/commitment/: multipedersen.rs  pedersen.rs
src/commitments/: multicommitment.rs  multipedersen.rs  pedersen.rs
src/dkg/: centralized_party.rs  decentralized_party.rs
src/dkg/centralized_party/: commitment_round.rs  decommitment_round.rs
src/dkg/decentralized_party/: commitment_round.rs  decommitment_proof_verification_round.rs  decommitment_round.rs  encryption_of_secret_key_share.rs  encryption_of_secret_key_share_round.rs  proof_aggregation_round.rs  proof_share_round.rs
src/group/: additive.rs  additive_group_of_integers_modulu_n.rs  direct_product.rs  multiplicative_group_of_integers_modulu_n.rs  paillier.rs  ristretto.rs  scalar.rs  secp256k1.rs  self_product.rs  self_product_group.rs
src/group/additive_group_of_integers_modulu_n/: odd_moduli.rs  odd_modulu.rs  power_of_two_moduli.rs  power_of_two_modulu.rs
src/group/ristretto/: group_element.rs  scalar.rs
src/group/secp256k1/: group_element.rs  scalar.rs
src/helpers/: const_generic_array_serialization.rs
src/homomorphic_encryption/: paillier.rs
src/presign/: centralized_party.rs  decentralized_party.rs
src/presign/centralized_party/: commitment_round.rs  proof_verification_round.rs
src/presign/decentralized_party/: encrypted_masked_key_share_and_public_nonce_shares_round.rs  encrypted_masked_nonces_round.rs  first_commitment_round.rs  first_decommitment_round.rs  masked_nonces_commitment_round.rs  masked_nonces_decommitment_round.rs  nonce_masking_commitment_round.rs  nonce_masking_decommitment_round.rs  nonce_masking_proof_aggregation_round.rs  nonce_masking_proof_share_round.rs  nonce_shares_and_masked_key_shares_commitment_round.rs  nonce_shares_and_masked_key_shares_decommitment_round.rs  nonce_shares_and_masked_key_shares_proof_share_round.rs  nonce_sharing_and_key_share_masking_commitment_round.rs  nonce_sharing_and_key_share_masking_decommitment_round.rs  nonce_sharing_and_key_share_masking_proof_share_round.rs  nonce_sharing_and_keyshare_masking_commitment_round.rs  nonce_sharing_and_keyshare_masking_decommitment_round.rs  nonce_sharing_and_keyshare_masking_proof_share_round.rs
src/proofs/: lightning.rs  range.rs  schnorr.rs  transcript_protocol.rs
src/proofs/lightning/: enhanced_schnorr.rs
src/proofs/maurer/: aggregation.rs  language.rs  proof.rs
src/proofs/maurer/aggregation/: commitment_round.rs  decommitment_round.rs  proof_aggregation_round.rs  proof_share_round.rs
src/proofs/maurer/language/: committed_linear_evaluation.rs  committment_of_discrete_log.rs  discrete_log_ratio_of_committed_values.rs  encryption_of_discrete_log.rs  encryption_of_tuple.rs  enhanced.rs  knowledge_of_decommitment.rs  knowledge_of_discrete_log.rs
src/proofs/maurer/proof/: enhanced.rs
src/proofs/range/: bulletproofs.rs  lightningproofs.rs
src/proofs/range/bulletproofs/: commitment_round.rs  decommitment_and_poly_commitment_round.rs  decommitment_round.rs  proof_aggregation_round.rs  proof_share_round.rs
src/proofs/schnorr/: aggregation.rs  commitment_of_discrete_log.rs  committed_affine_evaluation.rs  committed_linear_evaluation.rs  encryption_of_discrete_log.rs  enhanced.rs  enhanced_language.rs  knowledge_of_decommitment.rs  knowledge_of_discrete_log.rs  language.rs  proof.rs
src/proofs/schnorr/aggregation/: commitment_round.rs  decommitment_round.rs  proof_aggregation_round.rs  proof_round.rs  proof_share_round.rs
src/proofs/schnorr/enhanced_language/: committed_linear_evaluation.rs  encryption_of_discrete_log.rs
src/proofs/schnorr/language/: aliases.rs  commitment_of_discrete_log.rs  committed_linear_evaluation.rs  committment_of_discrete_log.rs  discrete_log_ratio_of_commited_values.rs  discrete_log_ratio_of_committed_values.rs  encryption_of_discrete_log.rs  encryption_of_tuple.rs  enhanced.rs  knowledge_of_decommitment.rs  knowledge_of_discrete_log.rs
src/proofs/schnorr/language/enhanced/: committed_linear_evaluation.rs  encryption_of_discrete_log.rs  encryption_of_tuple.rs
src/proofs/schnorr/proof/: enhanced.rs
src/sign/: centralized_party.rs  decentralized_party.rs
src/sign/centralized_party/: signature_homomorphic_evaluation_round.rs  signature_verification_round.rs
src/sign/decentralized_party/: identifiable_abort.rs  signature_partial_decryption_round.rs  signature_threhsold_decryption_round.rs  signature_threshold_decryption_round.rs
src/sign/decentralized_party/identifiable_abort/: signature_partial_decryption_proof_round.rs  signature_partial_decryption_verification_round.rs
